This add will include links and unordered list as well as the four main paragraphs.

--- a/mockwiki.html
+++ b/mockwiki.html
@@ -2,25 +2,59 @@
 <html>
   <head>
     <title>Wikipedia, the free encyclopedia</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
+    <div class="container">
     <h1>Welcome to <a href="#">Wikipedia</a>,</h1> the free encyclopedia that anyone can edit. 5,223,246 articles in English
+
     <ul>
-      <li>Arts</li>
-      <li>Biography</li>
-      <li>Geography</li>
-      <li>History</li>
-      <li>Mathematics</li>
-      <li>Science</li>
-      <li>Society</li>
-      <li>Technology</li>
-      <li>All portals</li>
+      <li><a href="#">Arts</a></li>
+      <li><a href="#">Biography</li>
+      <li><a href="#">Geography</li>
+      <li><a href="#">History</li>
+      <li><a href="#">Mathematics</li>
+      <li><a href="#">Science</li>
+      <li><a href="#">Society</li>
+      <li><a href="#">Technology</li>
+      <li><a href="#">All portals</a></li>
     </ul>
+    <h2><strong>From today's featured article</strong></h2>
+      <p>Todd Manning is a fictional character from the American daytime drama One Life to Live. Created by writer Michael Malone, the role was originated in 1992 by actor Roger Howarth, recast with Trevor St. John in 2003, and given back to Howarth in 2011. Todd became part of a groundbreaking storyline in which Marty Saybrooke was gang raped. Todd's popularity with the audience and critics, even after the rape, persuaded the writers to retain the character. While keeping aspects of his personality dark and violent, they had Todd exhibit a conscience and compassion. They took steps to redeem him, borrowing from nineteenth-century melodrama, Gothic traditions, and literature such as Frankenstein, despite Howarth's objections to a redemption storyline for a rapist. Todd has been the subject of many scholarly feminist studies. He has remained a popular and controversial figure since his creation, and is considered one of soap opera's breakout characters. The main players in the rape storyline—Howarth, Susan Haskell (Marty), and Hillary B. Smith (Todd's lawyer Nora Hanen)—won Emmys in 1994, as did Malone and his writing team.
+      </p>
 
+    <h2><strong>Did you know...</strong></h2>
+      <p>... that the Bazman volcano (pictured) in Iran is undergoing active surface deformation?
+... that Elizabeth Casson set up an early occupational therapy school with funds borrowed from her brother Lewis?
+... that in Hindu mythology, the demon Kalanemi who was killed by Vishnu, was reborn as Kamsa to be eventually killed by Vishnu's reincarnation Krishna?
+... that Mexican politician Joaquín Díaz Mena managed a Cancún hotel, taught Telesecundaria classes, and was involved in ranching?
+... that Mabel Mudge became the longest-serving landlady in the UK in 1995, having run the Drewe Arms, Drewsteignton, for 75 years?
+... that the song "War Paint" performed by American singer Fletcher was the most shared song on Spotify in the United States for the week commencing June 29, 2015?
+... that the association footballer Willie Carlin accepted a transfer to Derby County after his wife declared that she wanted to move away from Sheffield?
+Recently improved articles Start a new article Nominate an article</p>
 
+    <h2><strong>In the news</strong></h2>
+      <p>The exoplanet Proxima Centauri b is discovered in the habitable zone around Proxima Centauri, the closest star to the Sun.
+A magnitude 6.2 earthquake hits central Italy, killing at least 159 people.
+The Summer Olympics conclude (ceremony pictured) in Rio de Janeiro, Brazil.
+At least 54 people are killed when a wedding is attacked by a suicide bomber in Gaziantep, southern Turkey.
+The Airlander 10 hybrid airship – the largest aircraft flying today – completes its maiden civilian voyage.
+Ongoing: Louisiana floods Kashmir unrest
+Recent deaths: Toots Thielemans S. R. Nathan Donald Henderson Jack Riley</p>
 
+    <h2><strong>On this day...</strong></h2>
+      <p>August 25:
+        1258 – George Mouzalon, regent of the Empire of Nicaea, was assassinated as part of a conspiracy led by the nobles under future emperor Michael VIII Palaiologos.
+1537 – The Honourable Artillery Company, currently the oldest surviving regiment in the British Army, was formed by Royal Charter from King Henry VIII.
+1920 – Polish forces under Józef Piłsudski (pictured) successfully forced the Russians to withdraw from Warsaw at the Battle of Warsaw, the decisive battle of the Polish–Soviet War.
+1942 – Second World War: Japanese forces attacked the Australian base at Milne Bay on the eastern tip of New Guinea.
+2001 – American singer Aaliyah and various members of her record company were killed when their overloaded aircraft crashed shortly after takeoff from Marsh Harbour Airport in Marsh Harbour, The Bahamas.
+More anniversaries: August 24 August 25 August 26
+Archive By email List of historical anniversaries
+Current date: August 25, 2016 (UTC) Reload this page</p>
+    </div>
+  </body>
 
 
 
