--- a/mockwiki.html
+++ b/mockwiki.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>Wikipedia, the free encyclopedia</title>
-    <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <div class="container">
-    <h1>Welcome to <a href="#">Wikipedia</a>,</h1> the free encyclopedia that anyone can edit. 5,223,246 articles in English
+    <div class="container" class="jumbotron">
+      <header class="page-header">
+        <h1>Welcome to <a href="#">Wikipedia</a>,</h1> the free encyclopedia that anyone can edit. 5,223,246 articles in English
 
-    <ul>
+    <ul class="pull-right">
       <li><a href="#">Arts</a></li>
       <li><a href="#">Biography</li>
       <li><a href="#">Geography</li>
@@ -20,12 +21,13 @@
       <li><a href="#">Technology</li>
       <li><a href="#">All portals</a></li>
     </ul>
-    <h2><strong>From today's featured article</strong></h2>
-      <p>Todd Manning is a fictional character from the American daytime drama One Life to Live. Created by writer Michael Malone, the role was originated in 1992 by actor Roger Howarth, recast with Trevor St. John in 2003, and given back to Howarth in 2011. Todd became part of a groundbreaking storyline in which Marty Saybrooke was gang raped. Todd's popularity with the audience and critics, even after the rape, persuaded the writers to retain the character. While keeping aspects of his personality dark and violent, they had Todd exhibit a conscience and compassion. They took steps to redeem him, borrowing from nineteenth-century melodrama, Gothic traditions, and literature such as Frankenstein, despite Howarth's objections to a redemption storyline for a rapist. Todd has been the subject of many scholarly feminist studies. He has remained a popular and controversial figure since his creation, and is considered one of soap opera's breakout characters. The main players in the rape storyline—Howarth, Susan Haskell (Marty), and Hillary B. Smith (Todd's lawyer Nora Hanen)—won Emmys in 1994, as did Malone and his writing team.
-      </p>
+      </header>
+        <h2><strong>From today's featured article</strong></h2>
+        <p>Todd Manning is a fictional character from the American daytime drama One Life to Live. Created by writer Michael Malone, the role was originated in 1992 by actor Roger Howarth, recast with Trevor St. John in 2003, and given back to Howarth in 2011. Todd became part of a groundbreaking storyline in which Marty Saybrooke was gang raped. Todd's popularity with the audience and critics, even after the rape, persuaded the writers to retain the character. While keeping aspects of his personality dark and violent, they had Todd exhibit a conscience and compassion. They took steps to redeem him, borrowing from nineteenth-century melodrama, Gothic traditions, and literature such as Frankenstein, despite Howarth's objections to a redemption storyline for a rapist. Todd has been the subject of many scholarly feminist studies. He has remained a popular and controversial figure since his creation, and is considered one of soap opera's breakout characters. The main players in the rape storyline—Howarth, Susan Haskell (Marty), and Hillary B. Smith (Todd's lawyer Nora Hanen)—won Emmys in 1994, as did Malone and his writing team.
+        </p>
 
-    <h2><strong>Did you know...</strong></h2>
-      <p>... that the Bazman volcano (pictured) in Iran is undergoing active surface deformation?
+        <h2><strong>Did you know...</strong></h2>
+        <p>... that the Bazman volcano (pictured) in Iran is undergoing active surface deformation?
 ... that Elizabeth Casson set up an early occupational therapy school with funds borrowed from her brother Lewis?
 ... that in Hindu mythology, the demon Kalanemi who was killed by Vishnu, was reborn as Kamsa to be eventually killed by Vishnu's reincarnation Krishna?
 ... that Mexican politician Joaquín Díaz Mena managed a Cancún hotel, taught Telesecundaria classes, and was involved in ranching?
@@ -34,7 +36,7 @@
 ... that the association footballer Willie Carlin accepted a transfer to Derby County after his wife declared that she wanted to move away from Sheffield?
 Recently improved articles Start a new article Nominate an article</p>
 
-    <h2><strong>In the news</strong></h2>
+      <h2><strong>In the news</strong></h2>
       <p>The exoplanet Proxima Centauri b is discovered in the habitable zone around Proxima Centauri, the closest star to the Sun.
 A magnitude 6.2 earthquake hits central Italy, killing at least 159 people.
 The Summer Olympics conclude (ceremony pictured) in Rio de Janeiro, Brazil.
@@ -43,7 +45,7 @@ The Airlander 10 hybrid airship – the largest aircraft flying today – comple
 Ongoing: Louisiana floods Kashmir unrest
 Recent deaths: Toots Thielemans S. R. Nathan Donald Henderson Jack Riley</p>
 
-    <h2><strong>On this day...</strong></h2>
+      <h2><strong>On this day...</strong></h2>
       <p>August 25:
         1258 – George Mouzalon, regent of the Empire of Nicaea, was assassinated as part of a conspiracy led by the nobles under future emperor Michael VIII Palaiologos.
 1537 – The Honourable Artillery Company, currently the oldest surviving regiment in the British Army, was formed by Royal Charter from King Henry VIII.
@@ -55,8 +57,5 @@ Archive By email List of historical anniversaries
 Current date: August 25, 2016 (UTC) Reload this page</p>
     </div>
   </body>
-
-
-
 
 </html>
